Add more default vars

--- a/templates/ecs.config.j2
+++ b/templates/ecs.config.j2
@@ -5,3 +5,13 @@ ECS_LOGFILE=/log/ecs-agent.log
 ECS_AVAILABLE_LOGGING_DRIVERS=["json-file","awslogs"]
 ECS_LOGLEVEL=info
 ECS_CLUSTER={{ cluster_name }}
+ECS_SELINUX_CAPABLE=true
+ECS_APPARMOR_CAPABLE=false
+DOCKER_HOST=unix:///var/run/docker.sock
+ECS_UPDATES_ENABLED=true
+ECS_POLL_METRICS=true
+ECS_DISABLE_PRIVILEGED=false
+ECS_DISABLE_IMAGE_CLEANUP=false
+ECS_IMAGE_CLEANUP_INTERVAL=30m
+ECS_IMAGE_PULL_BEHAVIOR=always
+ECS_ENABLE_SPOT_INSTANCE_DRAINING=true
